changed page sites, fixed quotes on narrow screens, changed nav names, polished css code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ h6 {
 
 /*     ---Nav---     */
 
+.navbar-style {
+    background-color: none;
+    height: 5vh;
+}
+
 .btn {
     background: none;
     border: none;
@@ -72,6 +77,12 @@ h6 {
 .dropdown {
     margin: 10px;
     width: 285px;
+}
+
+.subs
+{
+    font-family: 'Oswald', sans-serif;
+    font-size: 15px;
 }
 
 /*     ---Footer---     */
@@ -189,7 +200,7 @@ h2 {
 }
 
 .quote-txt {
-    padding-top: 600px;
+    padding-top: 300px;
 }
 
 /*------------------PERSONAL------------------*/
@@ -220,7 +231,7 @@ h2 {
 
 .pages-title-wrapper {
     width: 100%;
-    height: 60vh;
+    height: 98vh;
     background-color: green;
 }
 
@@ -231,27 +242,20 @@ h2 {
     padding: 2px 0 50px;
 }
 
-.test2 {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    border: 10px solid orange;
-    border-radius: 25px;
+.card {
+    margin: 0;
+    padding: 0;
 }
 
-.test3 {
-    border: 5px solid white;
+.card-deck {
+    width: 100%;
+    padding-top: 45px;
 }
 
-.test4 {
-    background-color: blue;
-    border: 5px solid white;
-    border-radius: 12px;
-    height: 500px;
+.card-body {
+    padding: 0.50rem;
 }
 
-.testnav {
-    background-color: none;
-    height: 5vh;
+.card-text {
+    font-size: 24px;
 }
